--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_USERNAME=netawix
-DB_PASSWORD=LrgdWcSoIDS2OQ66yCLhu7V8sP6TxLVM
-DB_INTERNAL_HOST=dpg-cm01666d3nmc738hp010-a
-DB_EXTERNAL_HOST=dpg-cm01666d3nmc738hp010-a.oregon-postgres.render.com
-DB_DATABASE_NAME=coex_vjqt
+DB_PASSWORD=OYZvcXHfpHftMrykcu9hjPGaJ9floAWK
+DB_INTERNAL_HOST=dpg-cob3o8v79t8c73bnig8g-a
+DB_EXTERNAL_HOST=dpg-cob3o8v79t8c73bnig8g-a.singapore-postgres.render.com
+DB_DATABASE_NAME=exchanges_db_name
 DB_PORT=5432
