change amin mail and password

--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ DB_INTERNAL_HOST=dpg-cob3o8v79t8c73bnig8g-a
 DB_EXTERNAL_HOST=dpg-cob3o8v79t8c73bnig8g-a.singapore-postgres.render.com
 DB_DATABASE_NAME=exchanges_db_name
 DB_PORT=5432
-ADMIN_EMAIL=admin@gmail.com
+ADMIN_EMAIL=admin@post.bgu.ac.il
 ADMIN_PASS=NetaKeta
